crates/keron-lang/tests/corpus/errors/check/match_arm_body_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 6:14
  |
6 |     "off" => "zero",
  |              ^^^^^^
